[tool.poetry]
name = "ds_from_scratch"
version = "0.1.0"
description = ""
authors = ["jordangaston <jordangaston1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
simpy = "^4.0.1"
pytest-mock = "^3.6.1"
pickleDB = "^0.9.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
